{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 135,
  "lineage": "b4842d02-cbcb-8017-76fc-0a59fd38bd3e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031ec2e4f48b99018",
            "arn": "arn:aws:ec2:us-east-2:835606782804:elastic-ip/eipalloc-031ec2e4f48b99018",
            "association_id": "eipassoc-088d1c988793bd3f2",
            "domain": "vpc",
            "id": "eipalloc-031ec2e4f48b99018",
            "network_border_group": "us-east-2",
            "network_interface": "eni-00c79143948953de0",
            "private_dns": "ip-11-0-10-123.us-east-2.compute.internal",
            "private_ip": "11.0.10.123",
            "public_dns": "ec2-3-18-7-188.us-east-2.compute.amazonaws.com",
            "public_ip": "3.18.7.188",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "tf_eip"
            },
            "tags_all": {
              "Name": "tf_eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835606782804:internet-gateway/igw-04264e9adfcb45489",
            "id": "igw-04264e9adfcb45489",
            "owner_id": "835606782804",
            "region": "us-east-2",
            "tags": {
              "Name": "tf_igw"
            },
            "tags_all": {
              "Name": "tf_igw"
            },
            "vpc_id": "vpc-0daec2ce3e52efb28"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tf_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031ec2e4f48b99018",
            "association_id": "eipassoc-088d1c988793bd3f2",
            "connectivity_type": "public",
            "id": "nat-091efc1992aacacf6",
            "network_interface_id": "eni-00c79143948953de0",
            "private_ip": "11.0.10.123",
            "public_ip": "3.18.7.188",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dba78ce546ace54e",
            "tags": {
              "Name": "tf_nat_gateway"
            },
            "tags_all": {
              "Name": "tf_nat_gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.tf_eip",
            "aws_internet_gateway.tf_igw",
            "aws_subnet.tf_public_subnet-1",
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835606782804:route-table/rtb-0f03bacabfc6a227c",
            "id": "rtb-0f03bacabfc6a227c",
            "owner_id": "835606782804",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-091efc1992aacacf6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_private_route_table"
            },
            "tags_all": {
              "Name": "tf_private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daec2ce3e52efb28"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.tf_eip",
            "aws_internet_gateway.tf_igw",
            "aws_nat_gateway.tf_nat_gateway",
            "aws_subnet.tf_public_subnet-1",
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835606782804:route-table/rtb-021b1cc22aae0a723",
            "id": "rtb-021b1cc22aae0a723",
            "owner_id": "835606782804",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04264e9adfcb45489",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_public_route_table"
            },
            "tags_all": {
              "Name": "tf_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daec2ce3e52efb28"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_private_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03765180638970ba3",
            "region": "us-east-2",
            "route_table_id": "rtb-0f03bacabfc6a227c",
            "subnet_id": "subnet-0cd55cc5edb5237bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.tf_eip",
            "aws_internet_gateway.tf_igw",
            "aws_nat_gateway.tf_nat_gateway",
            "aws_route_table.tf_private_rt",
            "aws_subnet.tf_private_subnet-1",
            "aws_subnet.tf_public_subnet-1",
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_private_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb4c54091016aadd",
            "region": "us-east-2",
            "route_table_id": "rtb-0f03bacabfc6a227c",
            "subnet_id": "subnet-033460b6cda80a570"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.tf_eip",
            "aws_internet_gateway.tf_igw",
            "aws_nat_gateway.tf_nat_gateway",
            "aws_route_table.tf_private_rt",
            "aws_subnet.tf_private_subnet-2",
            "aws_subnet.tf_public_subnet-1",
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_public_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4ffddacd4ab54b6",
            "region": "us-east-2",
            "route_table_id": "rtb-021b1cc22aae0a723",
            "subnet_id": "subnet-0dba78ce546ace54e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_public_rt",
            "aws_subnet.tf_public_subnet-1",
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_public_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f79bb7a8a2bf4e17",
            "region": "us-east-2",
            "route_table_id": "rtb-021b1cc22aae0a723",
            "subnet_id": "subnet-0e25cfbdd93cd1246"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_public_rt",
            "aws_subnet.tf_public_subnet-2",
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_private_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835606782804:subnet/subnet-0cd55cc5edb5237bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "11.0.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd55cc5edb5237bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835606782804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "vpc_id": "vpc-0daec2ce3e52efb28"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_private_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835606782804:subnet/subnet-033460b6cda80a570",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "11.0.120.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033460b6cda80a570",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835606782804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "vpc_id": "vpc-0daec2ce3e52efb28"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835606782804:subnet/subnet-0dba78ce546ace54e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "11.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dba78ce546ace54e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835606782804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "vpc_id": "vpc-0daec2ce3e52efb28"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835606782804:subnet/subnet-0e25cfbdd93cd1246",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "11.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e25cfbdd93cd1246",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835606782804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "vpc_id": "vpc-0daec2ce3e52efb28"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835606782804:vpc/vpc-0daec2ce3e52efb28",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-02beb9b3d99184922",
            "default_route_table_id": "rtb-013522b8f85b733ee",
            "default_security_group_id": "sg-038ad1972981a243d",
            "dhcp_options_id": "dopt-0bb051d4376d7dbed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0daec2ce3e52efb28",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-013522b8f85b733ee",
            "owner_id": "835606782804",
            "region": "us-east-2",
            "tags": {
              "Name": "Eks VPC"
            },
            "tags_all": {
              "Name": "Eks VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}